Added building information